[project]
name = "langchain-academy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flake8>=7.3.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.74",
    "langchain-openai>=0.3.30",
    "langgraph>=0.6.5",
    "langgraph-cli[inmem]>=0.3.6",
    "notebook>=7.4.5",
    "tavily-python>=0.7.10",
    "trustcall>=0.0.39",
    "wikipedia>=1.4.0",
]
